--- a/docs/visual-basic/misc/bc30019.md
+++ b/docs/visual-basic/misc/bc30019.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30019
 ms.assetid: 7f0c7bb9-8e81-44bf-acc5-80d9785708aa
-ms.openlocfilehash: b0cf7b90e68d9a18478f3f98559f8b354c97173e
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 9db769f3ccdb49f19def73ab12244e2a728ed1cf
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33600116"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54544054"
 ---
 # <a name="delegates-cannot-handle-events"></a>대리자는 이벤트를 처리할 수 없습니다.
 대리자는 공유 프로시저 또는 개체의 인스턴스 프로시저를 가리키는 참조 형식입니다. 할당을 통해 가리키는 프로시저를 변경할 수 있으므로 `Delegate` 문은 `Handles` 또는 `Implements` 절을 지원할 수 없습니다.  
@@ -23,8 +23,8 @@ ms.locfileid: "33600116"
   
 -   `Handles` 문에서 `Delegate` 절을 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
-   
- [Delegate 문](../../visual-basic/language-reference/statements/delegate-statement.md)  
- [Handles](../../visual-basic/language-reference/statements/handles-clause.md)  
- [Implements 문](../../visual-basic/language-reference/statements/implements-statement.md)
+## <a name="see-also"></a>참고자료
+
+- [Delegate 문](../../visual-basic/language-reference/statements/delegate-statement.md)
+- [Handles](../../visual-basic/language-reference/statements/handles-clause.md)
+- [Implements 문](../../visual-basic/language-reference/statements/implements-statement.md)
