--- a/docs/visual-basic/misc/bc30195.md
+++ b/docs/visual-basic/misc/bc30195.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30195
 ms.assetid: 95684eaa-5aa2-4ae4-9a73-5f97c491e02c
-ms.openlocfilehash: ec1dc233461505d4906b97ab463e56398e675001
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 15e6b89df929ef285c198b69577ad4ebc763371d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53770639"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54541849"
 ---
 # <a name="expected-one-of-dim-const-public-private-protected-friend-shadows-readonly-or-shared"></a>'Dim', 'Const', 'Public', 'Private', 'Protected', 'Friend', 'Shadows', 'ReadOnly' 또는 'Shared' 중 하나가 필요합니다.
 선언문에 선언 키워드가 없습니다. 한 가지 가능한 원인은 특성 선언이 메서드를 호출하기 때문입니다.  
@@ -25,6 +25,6 @@ ms.locfileid: "53770639"
   
 2.  적절한 선언 키워드로 문을 시작합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [선언 요소](../../visual-basic/programming-guide/language-features/declared-elements/index.md)  
- [배열은 'New'로 선언할 수 없습니다.](../../visual-basic/misc/bc30053.md)
+## <a name="see-also"></a>참고자료
+- [선언 요소](../../visual-basic/programming-guide/language-features/declared-elements/index.md)
+- [배열은 'New'로 선언할 수 없습니다.](../../visual-basic/misc/bc30053.md)
