--- a/docs/visual-basic/misc/bc30215.md
+++ b/docs/visual-basic/misc/bc30215.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30215
 ms.assetid: 013f4200-b3cf-4cd8-a235-15067ca773fc
-ms.openlocfilehash: 71965c858667b99a6a4062d0459da43c47abb223
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: ddf6f22ee9dff70bb31b35836ded0b7597f98da3
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53783172"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54542637"
 ---
 # <a name="sub-or-function-expected"></a>'Sub' 또는 'Function'이 필요합니다.
 `Declare` 문이 `Sub` 또는 `Function`을 지정하지 않습니다. `Declare` 는 외부 프로시저를 식별하며 프로시저 종류를 지정해야 합니다.  
@@ -23,5 +23,5 @@ ms.locfileid: "53783172"
   
 -   `Sub` 문에 `Function` 또는 `Declare` 키워드를 추가합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Declare 문](../../visual-basic/language-reference/statements/declare-statement.md)
+## <a name="see-also"></a>참고자료
+- [Declare 문](../../visual-basic/language-reference/statements/declare-statement.md)
