--- a/docs/visual-basic/misc/bc30297.md
+++ b/docs/visual-basic/misc/bc30297.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30297
 ms.assetid: dfca67d7-f4d7-4451-a937-68f22b8527d5
-ms.openlocfilehash: 85d576300a0895f49aa1876e9f8b63f06ed3ba76
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 3ec277c6e74f81a99093cb8df58887f971844abe
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53771991"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54544304"
 ---
 # <a name="lterrorgt-ltconstructorname1gt-calls-ltconstructorname2gt"></a>&lt;오류&gt;: '&lt;constructorname1&gt;'호출'&lt;constructorname2&gt;'
 순환 생성자 호출이 발생합니다. 생성자가 `Me.New()` 또는 `MyClass.New()`를 호출합니다. 서로 다른 인수 목록을 사용하는 오버로드된 생성자를 호출하려는 시도 때문일 수 있습니다.  
@@ -25,5 +25,5 @@ ms.locfileid: "53771991"
   
 -   액세스할 수 있는 오버로드가 없는 경우 `Me.New()` 또는 `MyClass.New()`에 대한 호출을 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [생성자(C++)](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
+## <a name="see-also"></a>참고자료
+- [생성자](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
