--- a/docs/visual-basic/misc/bc30321.md
+++ b/docs/visual-basic/misc/bc30321.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30321
 ms.assetid: eeedbceb-2c8d-4acb-b84c-8b42c058f083
-ms.openlocfilehash: 30e39dc4a4628c81bfcf80f293a5c1bba8785063
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 8072a75ab89f9cc517007a9c95210615735213f5
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53761630"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54542342"
 ---
 # <a name="case-cannot-follow-a-case-else-in-the-same-select-statement"></a>'Case'는 같은 'Select' 문에서 'Case Else' 뒤에 올 수 없습니다.
 `Case Else` 문은 최초 `Case`와 일치하는 부분이 없는 경우 실행될 문을 지정합니다. 동일한 `Case` 블록에서 `Case Else` 문이 `Select` 다음에 있습니다.  
@@ -23,5 +23,5 @@ ms.locfileid: "53761630"
   
 -   `Case Else` 를 `Case` 문 다음에 적절한 위치로 이동합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Select...Case 문](../../visual-basic/language-reference/statements/select-case-statement.md)
+## <a name="see-also"></a>참고자료
+- [Select...Case 문](../../visual-basic/language-reference/statements/select-case-statement.md)
