--- a/docs/visual-basic/misc/bc31067.md
+++ b/docs/visual-basic/misc/bc31067.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31067
 ms.assetid: 8f854f5f-99b1-40c9-8c21-e24712f37f71
-ms.openlocfilehash: 51bfba1b1e16f5e5e3e76cdeb822c8ec74c08604
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 616a8e121a105e656c48ae616a98dc2958b737e7
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53771107"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54546045"
 ---
 # <a name="method-in-a-structure-cannot-be-declared-protected-or-protected-friend"></a>구조체의 메서드는 'Protected' 또는 'Protected Friend'로 선언할 수 없습니다.
 구조체의 메서드가 `Protected` 또는 `Protected Friend`로 선언되었습니다.  
@@ -23,7 +23,7 @@ ms.locfileid: "53771107"
   
 -   구조체 내의 메서드를 `Public` 또는 `Private`으로 선언합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Structure 문](../../visual-basic/language-reference/statements/structure-statement.md)  
- [보호됨](../../visual-basic/language-reference/modifiers/protected.md)  
- [Friend](../../visual-basic/language-reference/modifiers/friend.md)
+## <a name="see-also"></a>참고자료
+- [Structure 문](../../visual-basic/language-reference/statements/structure-statement.md)
+- [보호됨](../../visual-basic/language-reference/modifiers/protected.md)
+- [Friend](../../visual-basic/language-reference/modifiers/friend.md)
