--- a/docs/visual-basic/misc/bc31127.md
+++ b/docs/visual-basic/misc/bc31127.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31127
 ms.assetid: 70ecd206-449e-4ae0-bf6a-980c40d8d847
-ms.openlocfilehash: 5969cc7999b75b7c3c7617a23200de5fc86267df
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 62cc4a78d1f329cde1425e3bc8e0a81d96916358
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53767181"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54545928"
 ---
 # <a name="addhandler-is-already-declared"></a>'AddHandler'가 이미 선언되었습니다.
 둘 이상의 `AddHandler` 선언이 사용자 지정 이벤트 선언에 표시되었습니다. `AddHandler` 선언은 이벤트 처리기를 추가하는 데 사용되는 프로시저를 선언합니다.  
@@ -23,6 +23,6 @@ ms.locfileid: "53767181"
   
 -   중복 `AddHandler` 문을 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [AddHandler 문](../../visual-basic/language-reference/statements/addhandler-statement.md)  
- [Event 문](../../visual-basic/language-reference/statements/event-statement.md)
+## <a name="see-also"></a>참고자료
+- [AddHandler 문](../../visual-basic/language-reference/statements/addhandler-statement.md)
+- [Event 문](../../visual-basic/language-reference/statements/event-statement.md)
