--- a/docs/visual-basic/misc/bc36622.md
+++ b/docs/visual-basic/misc/bc36622.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36622
 ms.assetid: 8d301227-131d-4977-b3ff-1fc4e427f8fa
-ms.openlocfilehash: 605e3277cf54479084341c940c65600559640fbf
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: f45aa2bab8c1eddcbd0bd86613c40c972e83a5d0
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53773135"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54540639"
 ---
 # <a name="you-must-reference-at-least-one-range-variable-on-both-sides-of-the-equals-operator"></a>'Equals' 연산자의 양쪽에서 범위 변수를 하나 이상 참조해야 합니다.
 'Equals' 연산자의 양쪽에서 범위 변수를 하나 이상 참조해야 합니다. 범위 variable(s) \<variable(s) > 'Equals' 연산자의 한쪽에 표시 되어야 하며 범위 variable(s) \<variable(s) > 다른에 표시 되어야 합니다.  
@@ -23,10 +23,10 @@ ms.locfileid: "53773135"
   
  **오류 ID:** BC36622  
   
-## <a name="see-also"></a>참고 항목  
- [Visual Basic의 LINQ 소개](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)  
- [LINQ](../../visual-basic/programming-guide/language-features/linq/index.md)  
- [Join 절](../../visual-basic/language-reference/queries/join-clause.md)  
- [Group Join 절](../../visual-basic/language-reference/queries/group-join-clause.md)  
- [From 절](../../visual-basic/language-reference/queries/from-clause.md)  
- [Select 절](../../visual-basic/language-reference/queries/select-clause.md)
+## <a name="see-also"></a>참고자료
+- [Visual Basic의 LINQ 소개](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
+- [LINQ](../../visual-basic/programming-guide/language-features/linq/index.md)
+- [Join 절](../../visual-basic/language-reference/queries/join-clause.md)
+- [Group Join 절](../../visual-basic/language-reference/queries/group-join-clause.md)
+- [From 절](../../visual-basic/language-reference/queries/from-clause.md)
+- [Select 절](../../visual-basic/language-reference/queries/select-clause.md)
