--- a/docs/visual-basic/misc/bc36622.md
+++ b/docs/visual-basic/misc/bc36622.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC36622
 ms.assetid: 8d301227-131d-4977-b3ff-1fc4e427f8fa
-ms.openlocfilehash: 605e3277cf54479084341c940c65600559640fbf
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: f45aa2bab8c1eddcbd0bd86613c40c972e83a5d0
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53773135"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54540639"
 ---
-# <a name="you-must-reference-at-least-one-range-variable-on-both-sides-of-the-equals-operator"></a><span data-ttu-id="ffbab-102">'Equals' 연산자의 양쪽에서 범위 변수를 하나 이상 참조해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="ffbab-102">You must reference at least one range variable on both sides of the 'Equals' operator</span></span>
-<span data-ttu-id="ffbab-103">'Equals' 연산자의 양쪽에서 범위 변수를 하나 이상 참조해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="ffbab-103">You must reference at least one range variable on both sides of the 'Equals' operator.</span></span> <span data-ttu-id="ffbab-104">범위 variable(s) \<variable(s) > 'Equals' 연산자의 한쪽에 표시 되어야 하며 범위 variable(s) \<variable(s) > 다른에 표시 되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="ffbab-104">Range variable(s) \<variable(s)> must appear on one side of the 'Equals' operator, and range variable(s) \<variable(s)> must appear on the other.</span></span>  
+# <a name="you-must-reference-at-least-one-range-variable-on-both-sides-of-the-equals-operator"></a><span data-ttu-id="926bc-102">'Equals' 연산자의 양쪽에서 범위 변수를 하나 이상 참조해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="926bc-102">You must reference at least one range variable on both sides of the 'Equals' operator</span></span>
+<span data-ttu-id="926bc-103">'Equals' 연산자의 양쪽에서 범위 변수를 하나 이상 참조해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="926bc-103">You must reference at least one range variable on both sides of the 'Equals' operator.</span></span> <span data-ttu-id="926bc-104">범위 variable(s) \<variable(s) > 'Equals' 연산자의 한쪽에 표시 되어야 하며 범위 variable(s) \<variable(s) > 다른에 표시 되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="926bc-104">Range variable(s) \<variable(s)> must appear on one side of the 'Equals' operator, and range variable(s) \<variable(s)> must appear on the other.</span></span>  
   
- <span data-ttu-id="ffbab-105">LINQ 쿼리에 조인할 컬렉션에 대해 식별된 범위 변수는 식별된 컬렉션에 따라 `Equals` 연산자의 반대쪽에 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="ffbab-105">Range variables identified for collections to be joined in a LINQ query must be on opposite sides of the `Equals` operator, depending on the collection they are identified for.</span></span> <span data-ttu-id="ffbab-106">즉, 조인 중인 컬렉션 중 하나에 대해 식별된 범위 변수는 조인 중인 다른 컬렉션의 범위 변수에 대해 `Equals` 연산자의 반대쪽에 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="ffbab-106">That is, range variables identified for one of the collections being joined must be on the opposite side of the `Equals` operator from range variables for the other collection being joined.</span></span> <span data-ttu-id="ffbab-107">각 컬렉션의 범위 변수를 `Equals` 연산자의 같은 쪽에 함께 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="ffbab-107">Range variables from separate collections cannot be mixed on the same side of the `Equals` operator.</span></span>  
+ <span data-ttu-id="926bc-105">LINQ 쿼리에 조인할 컬렉션에 대해 식별된 범위 변수는 식별된 컬렉션에 따라 `Equals` 연산자의 반대쪽에 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="926bc-105">Range variables identified for collections to be joined in a LINQ query must be on opposite sides of the `Equals` operator, depending on the collection they are identified for.</span></span> <span data-ttu-id="926bc-106">즉, 조인 중인 컬렉션 중 하나에 대해 식별된 범위 변수는 조인 중인 다른 컬렉션의 범위 변수에 대해 `Equals` 연산자의 반대쪽에 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="926bc-106">That is, range variables identified for one of the collections being joined must be on the opposite side of the `Equals` operator from range variables for the other collection being joined.</span></span> <span data-ttu-id="926bc-107">각 컬렉션의 범위 변수를 `Equals` 연산자의 같은 쪽에 함께 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="926bc-107">Range variables from separate collections cannot be mixed on the same side of the `Equals` operator.</span></span>  
   
- <span data-ttu-id="ffbab-108">조인 중인 각 컬렉션의 변수 중 적어도 하나는 `Equals` 연산자의 양쪽에서 참조되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="ffbab-108">At least one variable from each collection being joined must be referenced on each side of the `Equals` operator.</span></span>  
+ <span data-ttu-id="926bc-108">조인 중인 각 컬렉션의 변수 중 적어도 하나는 `Equals` 연산자의 양쪽에서 참조되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="926bc-108">At least one variable from each collection being joined must be referenced on each side of the `Equals` operator.</span></span>  
   
- <span data-ttu-id="ffbab-109">**오류 ID:** BC36622</span><span class="sxs-lookup"><span data-stu-id="ffbab-109">**Error ID:** BC36622</span></span>  
+ <span data-ttu-id="926bc-109">**오류 ID:** BC36622</span><span class="sxs-lookup"><span data-stu-id="926bc-109">**Error ID:** BC36622</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ffbab-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="ffbab-110">See Also</span></span>  
- [<span data-ttu-id="ffbab-111">Visual Basic의 LINQ 소개</span><span class="sxs-lookup"><span data-stu-id="ffbab-111">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)  
- [<span data-ttu-id="ffbab-112">LINQ</span><span class="sxs-lookup"><span data-stu-id="ffbab-112">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)  
- [<span data-ttu-id="ffbab-113">Join 절</span><span class="sxs-lookup"><span data-stu-id="ffbab-113">Join Clause</span></span>](../../visual-basic/language-reference/queries/join-clause.md)  
- [<span data-ttu-id="ffbab-114">Group Join 절</span><span class="sxs-lookup"><span data-stu-id="ffbab-114">Group Join Clause</span></span>](../../visual-basic/language-reference/queries/group-join-clause.md)  
- [<span data-ttu-id="ffbab-115">From 절</span><span class="sxs-lookup"><span data-stu-id="ffbab-115">From Clause</span></span>](../../visual-basic/language-reference/queries/from-clause.md)  
- [<span data-ttu-id="ffbab-116">Select 절</span><span class="sxs-lookup"><span data-stu-id="ffbab-116">Select Clause</span></span>](../../visual-basic/language-reference/queries/select-clause.md)
+## <a name="see-also"></a><span data-ttu-id="926bc-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="926bc-110">See also</span></span>
+- [<span data-ttu-id="926bc-111">Visual Basic의 LINQ 소개</span><span class="sxs-lookup"><span data-stu-id="926bc-111">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
+- [<span data-ttu-id="926bc-112">LINQ</span><span class="sxs-lookup"><span data-stu-id="926bc-112">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)
+- [<span data-ttu-id="926bc-113">Join 절</span><span class="sxs-lookup"><span data-stu-id="926bc-113">Join Clause</span></span>](../../visual-basic/language-reference/queries/join-clause.md)
+- [<span data-ttu-id="926bc-114">Group Join 절</span><span class="sxs-lookup"><span data-stu-id="926bc-114">Group Join Clause</span></span>](../../visual-basic/language-reference/queries/group-join-clause.md)
+- [<span data-ttu-id="926bc-115">From 절</span><span class="sxs-lookup"><span data-stu-id="926bc-115">From Clause</span></span>](../../visual-basic/language-reference/queries/from-clause.md)
+- [<span data-ttu-id="926bc-116">Select 절</span><span class="sxs-lookup"><span data-stu-id="926bc-116">Select Clause</span></span>](../../visual-basic/language-reference/queries/select-clause.md)
