--- a/docs/visual-basic/misc/bc30003.md
+++ b/docs/visual-basic/misc/bc30003.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30003
 ms.assetid: 75a68984-decd-43e2-808a-f14b36dd2c60
-ms.openlocfilehash: fdee37d7251ee5c48b16e8ed4b759fa22f451378
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 0ffb0d3e34b9edeb2b9afd590b9148c3df506f82
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53767870"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54513505"
 ---
 # <a name="next-expected"></a>'Next'가 필요합니다.
 `On Error Resume` 구문이 종료 `Next`없이 발생합니다.  
@@ -23,8 +23,8 @@ ms.locfileid: "53767870"
   
 -   `Next` 문의 끝에 `On Error` 키워드를 추가합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [On Error 문](../../visual-basic/language-reference/statements/on-error-statement.md)  
- [Error 문](../../visual-basic/language-reference/statements/error-statement.md)  
- [Resume 문](../../visual-basic/language-reference/statements/resume-statement.md)  
+## <a name="see-also"></a>참고자료
+- [On Error 문](../../visual-basic/language-reference/statements/on-error-statement.md)
+- [Error 문](../../visual-basic/language-reference/statements/error-statement.md)
+- [Resume 문](../../visual-basic/language-reference/statements/resume-statement.md)
 
