--- a/docs/visual-basic/misc/bc36561.md
+++ b/docs/visual-basic/misc/bc36561.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36561
 ms.assetid: ff42d6e9-611b-407d-a269-f268b36ed277
-ms.openlocfilehash: fe3cbb3a65c843e4ad80375642834d2ce95df154
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 81573562546a44e9123c75dba2f7bb7dac4ad5b0
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53780456"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54505538"
 ---
 # <a name="extension-method-ltmethodnamegt-has-type-constraints-that-can-never-be-satisfied"></a>확장 메서드 '&lt;methodname&gt;'에 형식 제약 조건이 충족 될 수 있습니다
 이 메서드의 형식 매개 변수는 형식 제약 조건이 충족될 수 없도록 하는 방식으로 상호 작용합니다. 다음은 확장 메서드의 예입니다.  
@@ -40,6 +40,6 @@ ms.locfileid: "53780456"
   
 -   형식 선언을 변경하여 형식 간 상호 종속성을 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [확장명 메서드](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)  
- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+## <a name="see-also"></a>참고자료
+- [확장명 메서드](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
+- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
