--- a/docs/visual-basic/misc/bc30003.md
+++ b/docs/visual-basic/misc/bc30003.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30003
 ms.assetid: 75a68984-decd-43e2-808a-f14b36dd2c60
-ms.openlocfilehash: fdee37d7251ee5c48b16e8ed4b759fa22f451378
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 0ffb0d3e34b9edeb2b9afd590b9148c3df506f82
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53767870"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54513505"
 ---
-# <a name="next-expected"></a><span data-ttu-id="1818b-102">'Next'가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="1818b-102">'Next' expected</span></span>
-<span data-ttu-id="1818b-103">`On Error Resume` 구문이 종료 `Next`없이 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="1818b-103">An `On Error Resume` construct occurs without a concluding `Next`.</span></span>  
+# <a name="next-expected"></a><span data-ttu-id="83b37-102">'Next'가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="83b37-102">'Next' expected</span></span>
+<span data-ttu-id="83b37-103">`On Error Resume` 구문이 종료 `Next`없이 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="83b37-103">An `On Error Resume` construct occurs without a concluding `Next`.</span></span>  
   
- <span data-ttu-id="1818b-104">**오류 ID:** BC30003</span><span class="sxs-lookup"><span data-stu-id="1818b-104">**Error ID:** BC30003</span></span>  
+ <span data-ttu-id="83b37-104">**오류 ID:** BC30003</span><span class="sxs-lookup"><span data-stu-id="83b37-104">**Error ID:** BC30003</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1818b-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="1818b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="83b37-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="83b37-105">To correct this error</span></span>  
   
--   <span data-ttu-id="1818b-106">`Next` 문의 끝에 `On Error` 키워드를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="1818b-106">Add the `Next` keyword to the end of the `On Error` statement.</span></span>  
+-   <span data-ttu-id="83b37-106">`Next` 문의 끝에 `On Error` 키워드를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="83b37-106">Add the `Next` keyword to the end of the `On Error` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1818b-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="1818b-107">See Also</span></span>  
- [<span data-ttu-id="1818b-108">On Error 문</span><span class="sxs-lookup"><span data-stu-id="1818b-108">On Error Statement</span></span>](../../visual-basic/language-reference/statements/on-error-statement.md)  
- [<span data-ttu-id="1818b-109">Error 문</span><span class="sxs-lookup"><span data-stu-id="1818b-109">Error Statement</span></span>](../../visual-basic/language-reference/statements/error-statement.md)  
- [<span data-ttu-id="1818b-110">Resume 문</span><span class="sxs-lookup"><span data-stu-id="1818b-110">Resume Statement</span></span>](../../visual-basic/language-reference/statements/resume-statement.md)  
+## <a name="see-also"></a><span data-ttu-id="83b37-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="83b37-107">See also</span></span>
+- [<span data-ttu-id="83b37-108">On Error 문</span><span class="sxs-lookup"><span data-stu-id="83b37-108">On Error Statement</span></span>](../../visual-basic/language-reference/statements/on-error-statement.md)
+- [<span data-ttu-id="83b37-109">Error 문</span><span class="sxs-lookup"><span data-stu-id="83b37-109">Error Statement</span></span>](../../visual-basic/language-reference/statements/error-statement.md)
+- [<span data-ttu-id="83b37-110">Resume 문</span><span class="sxs-lookup"><span data-stu-id="83b37-110">Resume Statement</span></span>](../../visual-basic/language-reference/statements/resume-statement.md)
 
