--- a/docs/visual-basic/misc/bc30273.md
+++ b/docs/visual-basic/misc/bc30273.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30273
 ms.assetid: f10c4f5f-6176-4dba-99a9-b58f3b390fba
-ms.openlocfilehash: 08f4ab2fd60a895e22b27bc72c995c88344232fb
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 3180653d948e4a4c78e8cad98cb4f5718ec250df
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53784159"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54629360"
 ---
 # <a name="ltspecifiergt-is-not-valid-on-an-interface-property-declaration"></a>'&lt;지정자&gt;' 인터페이스 속성 선언에서 유효 하지 않은
 인터페이스 내의 `Property` 문에는 `Implements`와 같은 잘못된 키워드가 포함되어 있습니다. 인터페이스는 멤버를 정의할 수만 있고 구현할 수는 없습니다.  
@@ -25,6 +25,6 @@ ms.locfileid: "53784159"
   
 -   인터페이스 멤버의 구현을 해당 인터페이스를 구현하는 클래스로 이동합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Interface 문](../../visual-basic/language-reference/statements/interface-statement.md)  
- [Implements 문](../../visual-basic/language-reference/statements/implements-statement.md)
+## <a name="see-also"></a>참고자료
+- [Interface 문](../../visual-basic/language-reference/statements/interface-statement.md)
+- [Implements 문](../../visual-basic/language-reference/statements/implements-statement.md)
