--- a/docs/visual-basic/misc/bc30476.md
+++ b/docs/visual-basic/misc/bc30476.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30476
 ms.assetid: 29bed445-a247-4c88-a1eb-115535900377
-ms.openlocfilehash: b544308ea50d283128407404052b3231c0642d9b
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: b590609d2ef5c40eaa7500b3b8ddd3e0ffbda745
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53766621"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54639616"
 ---
 # <a name="withevents-variables-cannot-be-typed-as-arrays"></a>'WithEvents' 변수는 배열로 형식화할 수 없습니다.
 `WithEvents`를 사용하여 배열을 선언하려고 했습니다. `WithEvents`를 사용하여 원하는 수만큼 개별 변수를 선언할 수 있지만 배열은 이런 방식으로 선언할 수 없습니다.  
@@ -23,6 +23,6 @@ ms.locfileid: "53766621"
   
 1.  변수를 개별적으로 선언합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Dim 문](../../visual-basic/language-reference/statements/dim-statement.md)  
- 
+## <a name="see-also"></a>참고자료
+- [Dim 문](../../visual-basic/language-reference/statements/dim-statement.md)
+
