--- a/docs/visual-basic/misc/bc30545.md
+++ b/docs/visual-basic/misc/bc30545.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30545
 ms.assetid: df271c05-1e7a-44e8-bf53-79f06ef916ab
-ms.openlocfilehash: 5709d04d4f99fbae626c1b630c1d42c26ddaf0cb
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: aa58d300dc60b7cac3019c0cd8a17a48639e8452
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33608458"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54638689"
 ---
 # <a name="property-access-must-assign-to-the-property-or-use-its-value"></a>속성 액세스를 속성에 할당하거나 속성 액세스에서 속성 값을 사용해야 합니다.
 속성에 할당하거나 해당 값을 사용하지 않고 속성에 액세스하려고 했습니다.
@@ -27,6 +27,6 @@ ms.locfileid: "33608458"
   
 -   속성의 값을 사용 합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [속성 프로시저](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)  
- [할당 연산자](../../visual-basic/language-reference/operators/assignment-operators.md)
+## <a name="see-also"></a>참고자료
+- [속성 프로시저](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [할당 연산자](../../visual-basic/language-reference/operators/assignment-operators.md)
