--- a/docs/visual-basic/misc/bc31047.md
+++ b/docs/visual-basic/misc/bc31047.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC31047
 ms.assetid: b2d79254-8efd-4b8f-b691-dc168caed207
-ms.openlocfilehash: f63f45efc96c3064d0f642fa65248aa3f324307e
-ms.sourcegitcommit: 22c3c8f74eaa138dbbbb02eb7d720fce87fc30a9
+ms.openlocfilehash: 7276b4a5b88639f7ac454d5895506f9307b0fbb5
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/17/2018
-ms.locfileid: "34234251"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54629646"
 ---
 # <a name="protected-types-can-only-be-declared-inside-of-a-class"></a>Protected 형식은 클래스 내부에서만 선언할 수 있습니다.
 모듈 내의 형식이 `Protected`로 선언되었습니다.
 
-적용 하면이 컴파일러 오류가 발생 하는 가장 일반적으로 `Protected` 중첩 되지 않은 클래스에 대 한 액세스 한정자입니다. 예를 들어:
+적용 하는 경우이 컴파일러 오류가 발생 하는 가장 일반적으로 `Protected` 중첩 되지 않은 클래스에 대 한 액세스 한정자입니다. 예를 들어:
 
 ```vb
 Public Class OuterClass     ' Generates compiler error BC31047.
 End Class
 ```
 
-때문에 `Protected` 멤버 액세스 한정자는 속성, 메서드 또는 중첩 된 클래스 처럼 클래스 멤버에만 적용 될 수 있습니다. 
+때문에 `Protected` 는 멤버 액세스 한정자를 클래스 멤버 속성, 메서드 또는 중첩 된 클래스에만 적용 될 수 있습니다. 
  
  **오류 ID:** BC31047  
   
@@ -34,6 +34,6 @@ End Class
   
 2.  `Protected` 한정자를 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Class 문](../../visual-basic/language-reference/statements/class-statement.md)  
- [보호됨](../../visual-basic/language-reference/modifiers/protected.md)
+## <a name="see-also"></a>참고자료
+- [Class 문](../../visual-basic/language-reference/statements/class-statement.md)
+- [보호됨](../../visual-basic/language-reference/modifiers/protected.md)
