--- a/docs/visual-basic/misc/bc31068.md
+++ b/docs/visual-basic/misc/bc31068.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31068
 ms.assetid: 5d62515b-0678-449a-983b-697e15aac621
-ms.openlocfilehash: 5cf39654bff68b61f992bbc315627cea003414c6
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 85ee2391c00af26445ce308d721fc0408a943d22
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53772823"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54628333"
 ---
 # <a name="delegate-in-an-interface-cannot-be-declared-ltspecifiergt"></a>인터페이스의 대리자를 선언할 수 없습니다. '&lt;지정자&gt;'
 잘못된 한정자가 인터페이스에서 선언된 대리자로 지정되었습니다.  
@@ -23,6 +23,6 @@ ms.locfileid: "53772823"
   
 1.  `Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`및 `Overridable`과 같은 한정자를 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [인터페이스](../../visual-basic/programming-guide/language-features/interfaces/index.md)  
- 
+## <a name="see-also"></a>참고자료
+- [인터페이스](../../visual-basic/programming-guide/language-features/interfaces/index.md)
+
