--- a/docs/visual-basic/misc/bc33013.md
+++ b/docs/visual-basic/misc/bc33013.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC33013
 ms.assetid: bfd805f4-e30e-4553-9cb7-2690595f0480
-ms.openlocfilehash: 8923f19572b603a822ca0be7462e1771a440a116
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 81f07a77ef5b82adcd52e225749fa69e21e3205d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53761721"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54640188"
 ---
 # <a name="operators-cannot-be-declared-ltkeywordgt"></a>연산자를 선언할 수 없습니다. '&lt;키워드&gt;'
 연산자가 연산자 정의에 유효하지 않은 키워드로 선언되었습니다.  
@@ -25,7 +25,7 @@ ms.locfileid: "53761721"
   
 -   연산자 정의에서 잘못된 키워드를 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [방법: 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [방법: 변환 연산자를 정의 합니다.](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+## <a name="see-also"></a>참고자료
+- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
+- [방법: 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [방법: 변환 연산자를 정의 합니다.](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
